# vecrypt

./: EXPLANATION.md  README.md  pyproject.toml
tests/: __init__.py  test_encrypt.py  test_integration.py  test_orthogonal.py  test_secret_share.py
vecrypt/: encrypt.py  orthogonal.py  secret_share.py
